--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,9 @@
 ---
 version: 0.2
 
-
+env:
+  parameter-store:
+    JWT_SECRET: JWT_SECRET
 phases:
   install:
     runtime-versions:
@@ -33,7 +35,7 @@ phases:
   post_build:
     commands:
       - docker push $REPOSITORY_URI:$TAG
-      - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --role-arn $EKS_KUBECTL_ROLE_ARN
+      - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --role-arn $EKS_KUBECTL_ROLE_ARN --no-verify-ssl
       - kubectl apply -f simple_jwt_api.yml 
       - printf '[{"name":"simple_jwt_api","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
 artifacts:
